[package]
name = "gent"
version = "0.1.0"
edition = "2021"

authors = ["Henry Huang <hhglory@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A cli tool to generate project templates"
readme = "README.md"
homepage = "https://github.com/better-rs/gent"
repository = "https://github.com/better-rs/gent"
keywords = ["cli", "generate", "template"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


################################################################################
# 自定义 bin script 名称 和 源码文件对应关系
################################################################################

[[bin]]
name = "rs-cli"
path = "src/bin/main.rs"


[dependencies]
